# rustms

./: README.md
backend/webapi/: .gitignore  Cargo.toml
backend/webapi/conf/: privatekey.pem  publickey.pem  settings.json
backend/webapi/dblink/: Cargo.toml
backend/webapi/dblink/src/: cryptutil.rs  dbcfg.rs  lib.rs  pglink.rs  settings.rs  settting.rs  sqlitelink.rs  strutil.rs
backend/webapi/entities/: Cargo.toml
backend/webapi/entities/src/: dto_login.rs  dto_portal_pie.rs  lib.rs  result_data.rs  result_page.rs  result_token.rs  sysdept.rs  sysmenu.rs  sysright.rs  sysrole.rs  sysuser.rs  treenode_dept.rs  treenode_menu.rs
backend/webapi/resources/pages/: index.html  login.html
backend/webapi/src/: config.rs  main.rs
backend/webapi/src/controller/: mod.rs  sys_auth.rs  sys_dept.rs  sys_menu.rs  sys_role.rs  sys_user.rs
backend/webapi/src/jwttoken/: jwt.rs  mod.rs
backend/webapi/src/models/: layer_dept.rs  layer_menu.rs  layer_role.rs  layer_user.rs  mod.rs
backend/webapi/src/utils/: cryptutil.rs  mod.rs  util.rs  webutil.rs
frontend/webui/: angular.json  package-lock.json  package.json  proxy.conf.json  start.sh
frontend/webui/src/: index.html
frontend/webui/src/app/: app-routing.module.ts  app.module.ts
frontend/webui/src/app/@core/: core.module.ts
frontend/webui/src/app/@shared/: shared.module.ts
frontend/webui/src/app/pages/: menus.ts  pages-routing.module.ts  (+2 more)
frontend/webui/src/config/: setting.ts
sql/: sys_dept_20220919.sql  sys_menu_20220919.sql  sys_right_20220919.sql  sys_role_20220919.sql  sys_user_20220919.sql
(+82 files in other folders)
