[package]
name = "rustms"
version = "1.1.1"
edition = "2021"
authors = ["bouyei"]
# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-web = { version = "4"}
actix-files="0.6"
actix-cors="0.6"
serde="1"
serde_json="1"
jsonwebtoken="7"
rust-crypto = "^0.2"
rustc-hex="2.1.0"
chrono = "0.4"
tokio-postgres = "0.7.6"
regex = "1"
#walkdir="2.3.2"
# zip="0.6.2"
entities={path="./entities"}
dblink={path="./dblink"}

[dependencies.uuid]
version = "1.1.2"
features = [
    "v4",                # Lets you generate random UUIDs
    "fast-rng",          # Use a faster (but still sufficiently random) RNG
    "macro-diagnostics", # Enable better diagnostics for compile-time UUIDs
]