[package]
name="dblink"
version="1.1.1"
edition="2021"

[dependencies]
serde="1"
serde_json="1.0.79"
deadpool-postgres = { version = "0.10.2", features = ["serde"] }
tokio={version="*"}
tokio-pg-mapper = "0.2.0"
tokio-pg-mapper-derive = "0.2.0"
tokio-postgres = "0.7.6"
#rusqlite="0.28.0"
#sqlite="0.27.0"